refines the design and adds test
